Fixed z-index for preview button
Upped the z-index to 9999 as it should always be on top of everything.
#38

--- a/plugins/SiteManager/webroot/css/sitemgr-overrides.css
+++ b/plugins/SiteManager/webroot/css/sitemgr-overrides.css
@@ -45,7 +45,7 @@ body {
 	position:fixed;
 	left: 0;
 	bottom: 0;
-	z-index: 500;
+	z-index: 9999;
 	background-color:#F0AD4E;
 	border-top-right-radius: 8px;
 	padding: 8px;
